attempt to fix button iOS

--- a/styles.css
+++ b/styles.css
@@ -60,7 +60,7 @@ p {
   font-size: 1rem;
 }
 
-button {
+.button {
   background: none;
   margin-bottom: -2px;
   margin-left: 6px;
